# restless

./: .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  README.md
docs/: README.md
src/: error.rs  main.rs  ui.rs
src/app/: app.rs  mod.rs  tab.rs
src/handlers/: keyboard.rs  mod.rs  navigation.rs  request.rs  tab.rs
src/logic/: mod.rs  request.rs  response.rs
src/terminal/: mod.rs
src/ui/: components.rs  layouts.rs  mod.rs  popups.rs  renderer.rs
