[package]
name = "restless"
version = "0.1.0"
edition = "2021"
authors = ["Pazl"]
description = "A postman clone in the terminal"
keywords = ["postman", "tui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
repository = "https://github.com/yourusername/restles"
# license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.98"
crossterm = "0.29.0"
ratatui = "0.29.0"
tokio = { version = "1", features = ["full"] }
reqwest = "0.12.20"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
urlencoding = "2.1.3"

[[bin]]
name = "restless"
path = "src/main.rs"
